--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,10 @@ android {
         applicationId "com.example.warehousemanagment"
         minSdk 21
         targetSdk 32
-        versionCode 8
+        versionCode 10
         versionName "16.3.0"
+
+        setProperty("archivesBaseName","goldiran")
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
